--- a/PPFE_Nuc_Seq/Figure_2/PPFE_Figure_2.Rmd
+++ b/PPFE_Nuc_Seq/Figure_2/PPFE_Figure_2.Rmd
@@ -367,95 +367,13 @@ wilcox_results
 write_xlsx(wilcox_results, file.path(folder, "PPFE_IPF_Mes_by_celltype_freq_wilcox.xlsx"))
 
 
-# Summarize data
-summary_df <- ggData %>%
-  group_by(Celltype_ID, Disease) %>%
-  summarise(
-    mean_value = median(value, na.rm = TRUE),
-    sd_value = sd(value, na.rm = TRUE)
-  ) %>%
-  ungroup()
+final_df <- summary_df %>%
+  left_join(wilcox_results, by = "Celltype_ID")
 
-write_xlsx(summary_df, file.path(folder, "PPFE_IPF_Mes_by_celltype_freq.xlsx"))
-
-# Wilcoxon test with per-group p-value adjustment
-wilcox_results <- ggData %>%
-  #filter(Celltype_ID == "Adventitial_Fb") %>%
-  group_by(Celltype_ID) %>%
-  wilcox_test(value ~ Disease) %>%
-  group_modify(~ mutate(.x, p.adj = p.adjust(.x$p, method = "bonferroni"))) %>%
-  add_significance("p.adj") %>%
-  ungroup()
-
-# Save the results
-write_xlsx(wilcox_results, file.path(folder, "Wilcox_results_by_celltype.xlsx"))
+final_df
 
 library(writexl)
 write_xlsx(final_df, file.path(folder, "PPFE_IPF_Mes_by_celltype_freq_Wilcox_rank_sum_test_merged.xlsx"))
-```
-
-```{r}
-library(dplyr)
-library(openxlsx)
-
-# Initialize a workbook
-wb <- createWorkbook()
-
-# Germany_PPFE
-median_frequencies_Germany_PPFE <- ggData %>%
-  filter(Disease == "Germany_PPFE") %>%
-  group_by(Celltype_ID) %>%
-  summarize(
-    median_freq = mean(value),
-    sd_freq = sd(value)
-  ) %>%
-  arrange(-median_freq)
-
-addWorksheet(wb, "Germany_PPFE")
-writeData(wb, "Germany_PPFE", median_frequencies_Germany_PPFE)
-
-# France_PPFE
-median_frequencies_France_PPFE <- ggData %>%
-  filter(Disease == "France_PPFE") %>%
-  group_by(Celltype_ID) %>%
-  summarize(
-    median_freq = mean(value),
-    sd_freq = sd(value)
-  ) %>%
-  arrange(-median_freq)
-
-addWorksheet(wb, "France_PPFE")
-writeData(wb, "France_PPFE", median_frequencies_France_PPFE)
-
-# Germany_CTRL
-median_frequencies_Germany_CTRL <- ggData %>%
-  filter(Disease == "Germany_CTRL") %>%
-  group_by(Celltype_ID) %>%
-  summarize(
-    median_freq = mean(value),
-    sd_freq = sd(value)
-  ) %>%
-  arrange(-median_freq)
-
-addWorksheet(wb, "Germany_CTRL")
-writeData(wb, "Germany_CTRL", median_frequencies_Germany_CTRL)
-
-# IPF_Belgium
-median_frequencies_Dutch_IPF <- ggData %>%
-  filter(Disease == "IPF_Belgium") %>%
-  group_by(Celltype_ID) %>%
-  summarize(
-    median_freq = mean(value),
-    sd_freq = sd(value)
-  ) %>%
-  arrange(-median_freq)
-
-addWorksheet(wb, "IPF_Belgium")
-writeData(wb, "IPF_Belgium", median_frequencies_Dutch_IPF)
-
-
-# Save the workbook
-saveWorkbook(wb, "PPFE_IPF_Celltype_Frequencies_ALL_b1b2_RPCA.xlsx", overwrite = TRUE)
 ```
 
 #===============
@@ -869,6 +787,106 @@ h_z
 dev.off()
 ```
 
+#================
+
+# Marker Genes per Subject
+```{r}
+myMultithreadFindMarkersDOR <- function(seurat.object, group.name, subject.ident, logFC.min.filter, ncores) {
+    library(parallel)
+    seurat.object$cellBarcode <- colnames(seurat.object)
+    num.cellsTotal <- nrow(seurat.object@meta.data)
+    group.levels <- as.vector(unique(seurat.object@meta.data[[group.name]]))
+    subject.levels <- as.vector(unique(seurat.object@meta.data[[subject.ident]]))
+    
+    # Multithread function
+    MultithreadFindMarkersDOR <- function(x) {
+        temp.cells <- seurat.object@meta.data %>%
+            filter(seurat.object@meta.data[[group.name]] == x) %>%
+            pull(cellBarcode)
+        
+        # Calculate per-subject averages for in-group and out-group
+        subject.mean.exp <- lapply(subject.levels, function(subj) {
+            subj.cells <- seurat.object@meta.data %>%
+                filter(seurat.object@meta.data[[subject.ident]] == subj) %>%
+                pull(cellBarcode)
+            inGroup.cells <- intersect(temp.cells, subj.cells)
+            outGroup.cells <- setdiff(subj.cells, temp.cells)
+            
+            avgExp.inGroup <- if (length(inGroup.cells) > 0) {
+                rowMeans(seurat.object@assays$RNA@data[, inGroup.cells, drop = FALSE])
+            } else {
+                rep(0, nrow(seurat.object@assays$RNA@data))
+            }
+            
+            avgExp.outGroup <- if (length(outGroup.cells) > 0) {
+                rowMeans(seurat.object@assays$RNA@data[, outGroup.cells, drop = FALSE])
+            } else {
+                rep(0, nrow(seurat.object@assays$RNA@data))
+            }
+            
+            list(avgExp.inGroup = avgExp.inGroup, avgExp.outGroup = avgExp.outGroup)
+        })
+        
+        temp.avgExpAllGenes.inGroup <- Reduce("+", lapply(subject.mean.exp, `[[`, "avgExp.inGroup")) / length(subject.levels)
+        temp.avgExpAllGenes.outGroup <- Reduce("+", lapply(subject.mean.exp, `[[`, "avgExp.outGroup")) / length(subject.levels)
+        
+        temp.all.logFC <- temp.avgExpAllGenes.inGroup - temp.avgExpAllGenes.outGroup
+        temp.filt.logFC <- temp.all.logFC[temp.all.logFC >= logFC.min.filter]
+        temp.numGenesFilt <- length(temp.filt.logFC)
+        
+        cat("Computing statistics for ", temp.numGenesFilt, " genes for ", x, ".\n", sep = "")
+        
+        num.cellsInGroup <- length(temp.cells)
+        num.cellsOutGroup <- num.cellsTotal - num.cellsInGroup
+        
+        num.TruePos <- rowSums(seurat.object@assays$RNA@data[names(temp.filt.logFC), temp.cells] > 0)
+        num.FalsePos <- rowSums(seurat.object@assays$RNA@data[names(temp.filt.logFC), !colnames(seurat.object@assays$RNA@data) %in% temp.cells] > 0)
+        
+        num.FalseNeg <- num.cellsInGroup - num.TruePos
+        num.TrueNeg <- num.cellsOutGroup - num.FalsePos
+        
+        temp.logDOR <- log((num.TruePos + 0.5) / (num.FalsePos + 0.5) / ((num.FalseNeg + 0.5) / (num.TrueNeg + 0.5)))
+        
+        temp.data <- seurat.object@assays$RNA@data[names(temp.filt.logFC), ]
+        p_val <- sapply(1:nrow(temp.data), function(x) {
+            wilcox.test(x = temp.data[x, temp.cells],
+                        y = temp.data[x, seurat.object$cellBarcode[!seurat.object$cellBarcode %in% temp.cells]])$p.value
+        })
+        names(p_val) <- names(temp.filt.logFC)
+        p_val_adj <- p.adjust(p = p_val, method = "bonferroni", n = nrow(seurat.object))
+        
+        temp.df <- data.frame(
+            group.name = rep(x, temp.numGenesFilt),
+            gene = names(temp.filt.logFC),
+            logFC = temp.filt.logFC,
+            logDOR = temp.logDOR,
+            pct.1 = num.TruePos / num.cellsInGroup,
+            pct.2 = num.FalsePos / num.cellsOutGroup,
+            p_val = p_val,
+            p_val_adj = p_val_adj,
+            nCells.in = num.cellsInGroup,
+            nCells.out = num.cellsOutGroup
+        )
+        colnames(temp.df)[colnames(temp.df) == "group.name"] <- group.name
+        
+        return(temp.df %>% arrange(desc(logDOR)))
+    }
+    
+    outputList <- parallel::mclapply(group.levels, MultithreadFindMarkersDOR, mc.cores = ncores)
+    return(Reduce(rbind, outputList))
+}
+
+### Mesencvhyme
+mes.markers.DOR_subject <- myMultithreadFindMarkersDOR(
+    seurat.object=PPFE_mes,
+    subject.ident = "orig.ident_final",
+    group.name="Celltype_ID_coarse",
+    logFC.min.filter=0.25, 
+    ncores=1)
+
+writexl::write_xlsx(mes.markers.DOR, "MES_MARKERS_FINAL_per_SUBJECT.xlsx")
+```
+
 #===============
 # FeaturePlots
 
@@ -1108,12 +1126,20 @@ dev.off()
 #==================
 
 # Volcano Plot
+
+## Mesenchame Lineage
 ```{r}
 # Load additional libraries
 library(EnhancedVolcano)
+library(ExperimentHub)
+library(DESeq2)
+library(tidyverse)
+
+
 ```
 
 ```{r}
+# Define DE Genes of interest for later Labeling in the Volcano Plot 
 mes_genes_oi <- c("CXCL14",  
                   "COL13A1" ,  
                   "LOX"  , 
@@ -1155,8 +1181,58 @@ mes_genes_oi <- c("CXCL14",
                   "FBXL3")
 ```
 
+```{r}
+# Secure DefaultAssay is switched to RNA
+DefaultAssay(PPFE) <- "RNA"
+PPFE <- subset(PPFE_mes, disease.ident != "IPF") # remove IPF 
+PPFE$cell_ident <- rownames(PPFE@meta.data)
+PPFE$cell_ident <- sub("^", "_", rownames(PPFE@meta.data))
+PPFE$samples <- paste0(PPFE$disease.ident, PPFE$cell_ident)
 
-```{r, fig.height=10, fig.width=18}
+# Aggregate Expression (Celllevel)
+cts <- AggregateExpression(PPFE, 
+                    group.by = c("disease.ident", "orig.ident_final"),
+                    assays = 'RNA',
+                    slot = "counts",
+                    return.seurat = FALSE)
+
+cts <- cts$RNA
+cts.t <- t(cts)
+cts.t <- as.data.frame(cts.t)
+cts <- t(cts.t)
+
+colData <- data.frame(samples = colnames(cts))
+
+colData <- colData %>%
+  mutate(condition = ifelse(grepl('PPFE', samples), 'PPFE', 'CTRL')) %>%
+  column_to_rownames(var = 'samples')
+
+# perform DESeq2
+# Create DESeq2 object   
+dds <- DESeqDataSetFromMatrix(countData = cts,
+                       colData = colData,
+                       design = ~ condition)
+
+# Filter
+keep <- rowSums(counts(dds)) >=10
+dds <- dds[keep,]
+
+# run DESeq2
+dds <- DESeq(dds, parallel = T)
+
+# Check the coefficients for the comparison
+resultsNames(dds)
+
+# Generate results object
+res <- results(dds, name = "condition_PPFE_vs_CTRL")
+
+# Changing rownames to extra column for better searching
+res_2_with_genes <- tibble::rownames_to_column(as.data.frame(res), "gene")
+rownames(res_2_with_genes) <- res_2_with_genes$gene
+# Remove mitochondrial genes for clarity
+res_2_with_genes <- res_2_with_genes[!grepl("MT-", res_2_with_genes$gene), ]
+saveRDS(res_2_with_genes, "mes_pseudobulk.rds")
+
 # Read in generated Pseudobulk Results
 tmp <- readRDS( "mes_pseudobulk.rds")
 # Modify Colnames
@@ -1201,12 +1277,80 @@ dev.off()
 writexl::write_xlsx(tmp, "PPFE_Pseudobulk_Fig2_Mesenchyme.xlsx")
 ```
 
+## Alveolar Fb
+```{r}
+# Aggregate Expression per Subject
+pseudo_ppfe <- AggregateExpression(PPFE_mes, assays = "RNA", 
+                                   return.seurat = T, 
+                                   group.by = c("disease.ident", "orig.ident_final", "Celltype_ID_coarse_heat"))
+
+# each 'cell' is a donor-condition-celltype pseudobulk profile
+head(Cells(pseudo_ppfe))
+
+# Create var from Celltype and disease
+pseudo_ppfe$CelltypeID.dis <- paste(pseudo_ppfe$Celltype_ID_coarse_heat, pseudo_ppfe$disease.ident, sep = "_")
+
+# Finad markers based on DESeq2
+AlvFb_DE <- FindMarkers(object = pseudo_ppfe, group.by = "CelltypeID.dis",
+                         ident.1 = "Alveolar-Fb_PPFE", 
+                         ident.2 = "Alveolar-Fb_CTRL",
+                         test.use = "DESeq2")
+
+# Create column with gene name for export
+AlvFb_DE$gene <- rownames(AlvFb_DE)
+AlvFb_DE -> temp 
+
+p <- EnhancedVolcano(temp, lab = temp$gene, 
+                     selectLab = mes_genes_oi[mes_genes_oi!="LTBP4" &  # re-use the prior used genes of interest vector but filter
+                                                mes_genes_oi!="FBN1" &  
+                                                mes_genes_oi!="IFNAR1"  &  
+                                                mes_genes_oi!="BGN"  &  
+                                                mes_genes_oi!="EFEMP1"],
+                       
+                                     x = 'avg_log2FC',
+                                    y = 'p_val_adj',
+                                    pCutoff = 0.05,
+                                    FCcutoff = 1,
+                                    title = paste0(""),
+                                    subtitle = '',
+                                    legendPosition = 'right',
+                                    legendLabSize = 12,
+                                    legendIconSize = 1.0,
+                                    col = c('grey20', 'grey50', 'lightgrey',"#A6CEE3"),
+                                    drawConnectors = T,
+                                    widthConnectors = 0.5, 
+                                    #lengthConnectors = unit(0.05,"in"), 
+                                    min.segment.length =0.05,
+                                    colConnectors = 'black', 
+                                    boxedLabels = T,
+                                    pointSize = 1.5,
+                                    labSize = 3, max.overlaps = Inf)+
+  theme_scp()+
+  NoLegend()+
+  theme(
+        plot.background = element_rect(fill = "white", colour = "white"),  # Set plot background to white
+        panel.background = element_rect(fill = "white", colour = "white"), # Set panel background to white
+        strip.background = element_rect(fill = "white", colour = "white"),
+        panel.grid.major = element_blank(),  # Remove major grid lines
+        panel.grid.minor = element_blank() # Remove minor grid lines) # Ensure strip background is also white
+        )+   
+  xlim(-5,5)->p
+    
+
+p
+pdf(file.path(folder, "AlvFb_DE_Volcano_DEGs.pdf"), height = 7, width = 7)
+p
+dev.off()
+
+writexl::write_xlsx(temp, "PPFE_Fig2_Pseudobulk_AlveolarFb.xlsx")
+```
+
 #==================
 
 ## Boxplots per Subject
 ```{r}
 # Select Celltypes of interest
-temp <- subset(PPFE_mes,Celltype_ID_coarse_heat %in% c("Adventitial_Fb", "Adventitial_like_Fb","Subpleural_Fb", "CTHRC1_MyoFb"))# "Adventitial_like_Fb","Subpleural_Fb"))#,"CTHRC1_MyoFb", "Alveolar_Fb"))
+temp <- subset(PPFE_mes,Celltype_ID_coarse_heat %in% c("Adventitial_Fb", "Adventitial_like_Fb","Subpleural_Fb", "CTHRC1_MyoFb"))
 # Remove levels
 temp$Celltype_ID_coarse_heat <- temp$Celltype_ID_coarse_heat %>% droplevels()   
 # Re-Factorize
@@ -1320,7 +1464,7 @@ ggplot(final_results, aes(x = disease.ident_cohort, y = Average_Expression, fill
   theme_scp() + stat_compare_means(label = "p.signif" )
 ```
 
-### IGF1
+### PDGFRA
 ```{r}
 # Initialize an empty list to store results for each cell type
 DefaultAssay(temp) <- "RNA"
@@ -1333,11 +1477,11 @@ for (celltype in celltypes) {
   # Filter and calculate average expression for the current cell type
   average_expression <- FetchData(
     subset(temp, Celltype_ID_coarse_heat == celltype ),#& disease.ident_cohort != "IPF__Belgium"),
-    vars = c("IGF1", "orig.ident_final", "disease.ident_cohort")
+    vars = c("PDGFRA", "orig.ident_final", "disease.ident_cohort")
   ) %>%
     group_by(orig.ident_final, disease.ident_cohort) %>%  # Group by subject and disease
     summarize(
-      Average_Expression = mean(IGF1)  # Calculate mean
+      Average_Expression = mean(PDGFRA)  # Calculate mean
     ) %>%
     ungroup() %>%
     mutate(CellType = celltype)  # Add cell type as a new column
@@ -1353,9 +1497,9 @@ ggplot(final_results, aes(x = disease.ident_cohort, y = Average_Expression, fill
   geom_boxplot(outlier.shape = NA, alpha = 0.6) +  # Boxplot without outlier points
   geom_jitter(width = 0.2, size = 2, colour = "black") +  # Data points for each subject
   labs(
-    title = "Average IGF1 Expression per Subject by Condition and Cell Type",
+    title = "Average PDGFRA Expression per Subject by Condition and Cell Type",
     x = "Condition",
-    y = "Average IGF1 Expression per subject"
+    y = "Average PDGFRA Expression per subject"
   ) +
   theme_minimal() +
   theme(
@@ -1371,7 +1515,7 @@ ggplot(final_results, aes(x = disease.ident_cohort, y = Average_Expression, fill
   facet_wrap(~CellType, nrow = 1, ncol = 4, scales = "free") +  # Create separate plots for each cell type
   theme_scp() + stat_compare_means(label = "p.signif" )
 
-temp <- subset(PPFE_mes,Celltype_ID_coarse_heat %in% c("Adventitial_Fb", "Adventitial_like_Fb","Subpleural_Fb", "CTHRC1_MyoFb"))# "Adventitial_like_Fb","Subpleural_Fb"))#,"CTHRC1_MyoFb", "Alveolar_Fb"))
+temp <- subset(PPFE_mes,Celltype_ID_coarse_heat %in% c("Adventitial_Fb", "Adventitial_like_Fb","Subpleural_Fb", "CTHRC1_MyoFb"))
 
 temp$Celltype_ID_coarse_heat <- temp$Celltype_ID_coarse_heat %>% droplevels()   
 
@@ -1382,57 +1526,6 @@ temp$disease.ident_cohort <- factor(temp$disease.ident_cohort,levels = c("German
                                     )
 ```
 
-### LTBR
-```{r}
-# Initialize an empty list to store results for each cell type
-results_list <- list()
-celltypes <- temp$Celltype_ID_coarse_heat %>% levels()
-DefaultAssay(temp) <- "RNA"
-
-# Loop through each cell type
-for (celltype in celltypes) {
-  # Filter and calculate average expression for the current cell type
-  average_expression <- FetchData(
-    subset(temp, Celltype_ID_coarse_heat == celltype ),#& disease.ident_cohort != "IPF__Belgium"),
-    vars = c("LTBR", "orig.ident_final", "disease.ident_cohort")
-  ) %>%
-    group_by(orig.ident_final, disease.ident_cohort) %>%  # Group by subject and disease
-    summarize(
-      Average_Expression = mean(LTBR)  # Calculate mean
-    ) %>%
-    ungroup() %>%
-    mutate(CellType = celltype)  # Add cell type as a new column
-  
-  # Append the result to the list
-  results_list[[celltype]] <- average_expression
-}
-
-# Combine all results into a single data frame
-final_results <- bind_rows(results_list)
-
-ggplot(final_results, aes(x = disease.ident_cohort, y = Average_Expression, fill = disease.ident_cohort)) +
-  geom_boxplot(outlier.shape = NA, alpha = 0.6) +  # Boxplot without outlier points
-  geom_jitter(width = 0.2, size = 2, colour = "black") +  # Data points for each subject
-  labs(
-    title = "Average LTBR Expression per Subject by Condition and Cell Type",
-    x = "Condition",
-    y = "Average LTBR Expression per subject"
-  ) +
-  theme_minimal() +
-  theme(
-    axis.text.x = element_text(angle = 45, hjust = 1),
-    legend.position = "none",
-    plot.background = element_rect(fill = "white", colour = "white"),  # Set plot background to white
-    panel.background = element_rect(fill = "white", colour = "white"), # Set panel background to white
-    strip.background = element_rect(fill = "white", colour = "white"),
-    panel.grid.major = element_blank(),  # Remove major grid lines
-    panel.grid.minor = element_blank() # Remove minor grid lines) # Ensure strip background is also white
-    ) +
-  scale_fill_manual(values = c(pal_cohort_pal)) +
-  facet_wrap(~CellType, nrow = 1, ncol = 4) +  # Create separate plots for each cell type
-  theme_scp() + stat_compare_means(label = "p.signif" )
-```
- 
 #==================
 
 ## Nebulosa Plots
